fix: find all getter point